made template name make a little more sense

--- a/client/views/newGame.html
+++ b/client/views/newGame.html
@@ -6,7 +6,7 @@
 			<input type="text" placeholder="Add your game name" id="gameName" class="form-control" />
 		</div>
 		{{#if haveAddedName}}
-			{{> addName}}
+			{{> gameInfo}}
 		{{/if}}
 		{{#if canGetWords}}
 			<p>
